Added Bootstrap 4 to 4.0.0 release notes

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -13,6 +13,31 @@ hidden: true
 
 ### Rails 6.0 support
 
+### Storefront and Admin Panel moved upgraded to Bootstrap 4.2
+
+We've migrated both the default Spree frontend and Admin Panel from Bootstrap 3 to Bootstrap 4.2. This update brings all of the new features and fixes introduced in [Bootstrap 4](https://blog.getbootstrap.com/2018/01/18/bootstrap-4/), [4.1](https://blog.getbootstrap.com/2018/04/09/bootstrap-4-1/) and [4.2](https://blog.getbootstrap.com/2018/12/21/bootstrap-4-2-1/). Accessibility and RWD was also improved in the process.
+
+Besides the Spree Frontend and Admin Panel we've also upgraded all extensions that required fixes, that is:
+
+- [Auth Devise](https://github.com/spree/spree_auth_devise)
+- [I18n](https://github.com/spree-contrib/spree_i18n)
+- [Multi Currency](https://github.com/spree-contrib/spree_multi_currency)
+- [Analytics Trackers](https://github.com/spree-contrib/spree_analytics_trackers)
+- [Digital](https://github.com/spree-contrib/spree_digital)
+- [Social](https://github.com/spree-contrib/spree_social)
+- [Editor](https://github.com/spree-contrib/spree_editor)
+- [Recently Viewed](https://github.com/spree-contrib/spree_recently_viewed)
+- [Related Products](https://github.com/spree-contrib/spree_related_products)
+- [Address Book](https://github.com/spree-contrib/spree_address_book)
+- [Static Content](https://github.com/spree-contrib/spree_static_content)
+- [Email to friend](https://github.com/spree-contrib/spree_email_to_friend)
+- [Volume Pricing](https://github.com/spree-contrib/spree_volume_pricing)
+- [Braintree vzero](https://github.com/spree-contrib/spree_braintree_vzero)
+- [Product Assembly](https://github.com/spree-contrib/spree-product-assembly)
+- [Avatax Certified](https://github.com/spree-contrib/spree_avatax_certified)
+
+If you use any of those extensions please update them along with the Spree update.
+
 ## Installation
 
 ### Add Spree gems to Gemfile
@@ -35,7 +60,7 @@ rails g spree_gateway:install
 
 ## Upgrade
 
-[Spree 3.7 to 4.0 upgrade guide](https://github.com/spree/spree/blob/master/guides/content/developer/upgrades/three-dot-seven-to-four-dot-zero.md)
+[3.7 to 4.0 upgrade guide](https://github.com/spree/spree/blob/master/guides/content/developer/upgrades/three-dot-seven-to-four-dot-zero.md)
 
 ## Noteworthy changes
 
