Updated Internationalization guide

--- a/guides/src/content/developer/customization/i18n.md
+++ b/guides/src/content/developer/customization/i18n.md
@@ -1,8 +1,10 @@
 ---
 title: "Internationalization"
 section: customization
-order: 7
+order: 8
 ---
+
+# Internationalization
 
 ## Overview
 
@@ -17,7 +19,7 @@ take some time to review the
 [official Rails i18n guide](http://guides.rubyonrails.org/i18n.html) to help you
 get started.
 
-### The spree_i18n project
+## The spree_i18n project
 
 Spree now stores all of the translation information in a separate GitHub project
 known as [spree_i18n](https://github.com/spree/spree_i18n). This is a stand
@@ -26,14 +28,9 @@ locale files. This is basically the same approach followed by the Rails project
 which keeps their localizations in
 [rails-i18n](https://github.com/svenfuchs/rails-i18n).
 
-The project is actually a Spree extension. This extension contains translations and
-uses the [globalize3 gem](https://github.com/svenfuchs/globalize3) to provide
-translations for model records.
-
-!!!
-You will need to install the [spree_i18n](https://github.com/spree/spree_i18n)
-gem if you want to use any of the community supplied translations of Spree.
-!!!
+The project is actually a Spree extension. This extension contains translations files.
+To translate models (provide translations for Products, Taxons, etc) you will need to install
+also [spree_globalize](https://github.com/spree-contrib/spree_globalize).
 
 ### Translation Files
 
@@ -49,25 +46,25 @@ pt-BR:
     say_yes: "Sim"
 ```
 
-***
+<alert kind="note">
 All translations for Spree are "namespaced" within the `spree` key so that they
 don't conflict with translations from other parts of the parent application.
-***
+</alert>
 
-#### Localization Files
+### Localization Files
 
 Spree maintains its localization information in a YAML file using a naming
 convention similar to that of the Rails project.  Each of the localization
 filenames contains a prefix representing the language code of the locale. For
 example, the Russian translation is contained in `config/locales/ru.yml`.
 
-***
+<alert kind="note">
 Spree has over 43 locale files and counting.  See the [GitHub
 Repository](https://github.com/spree/spree_i18n/tree/master/config/locales) for a
 complete list.
-***
+</alert>
 
-#### Required Files
+### Required Files
 
 Each locale that you wish to support will require both a Rails and Spree
 translation.  The required Spree translation files are available automatically
@@ -77,7 +74,7 @@ You don't need to copy any files from `spree_i18n` or `rails-i18n` for their
 translations to be available within your application. They are made available
 automatically, because both `spree_i18n` and `rails-i18n` are railties.
 
-### Translating Views
+## Translating Views
 
 When reviewing the source of any view in Spree you'll notice that all text is
 rendered by passing a string to a helper method similar to:
@@ -98,7 +95,23 @@ en:
     price: Price
 ```
 
-### The Default Locale
+&nbsp;
+
+## Model Translations
+
+Like mentioned before to translate models you will need to install [Spree Globalize extension](https://github.com/spree-contrib/spree_globalize) which uses [Globalize](https://github.com/globalize/globalize) library under the hood.
+
+This gem will allow you to translate:
+
+- Products
+- Promotions
+- Option Types
+- Taxonomies
+- Taxons
+- Properties
+- Shipping Methods
+
+## The Default Locale
 
 Since Spree is basically a Rails application it has the same default locale as
 any Rails application.  The default locale is `en` which use the English
@@ -117,36 +130,19 @@ into English
 => Action
 ```
 
-## Deploying the Translations
+&nbsp;
 
-The `spree_i18n` gem is configured in the same manner as any Rubygem in a Rails
-application.  Simply add it to the `Gemfile.` using the git url.
-
-```ruby
-gem 'spree_i18n', github: 'spree/spree_i18n'
-```
-
-### Setting the Default Locale
+## Setting the Default Locale
 
 The default locale for Rails, and therefore Spree, is `en`. This can be changed by setting
 `config.i18n.default_locale` in `config/application.rb`. This setting is ignored
 unless the relevant translation file are within `#{Rails.root}/config/locales`
 or the `spree_i18n` gem.
 
-### Setting the Default Currency
+## Setting the Default Currency
 
-***
-This functionality was new in Spree 1.2. Please refer to the appropriate
-guide if you are using an older version.
-***
-
-In earlier versions of Spree, we used `number_to_currency` to display prices for
-products. This caused a problem when somebody selected a different I18n locale,
-as the prices would be displayed in their currency: 20 Japanese Yen, rather than
-20 American Dollars, for instance.
-
-To fix this problem, we're now parsing the prices through the Money gem which
-will display prices consistently across all I18n locales. To now change the
+We're parsing the prices through the [Money gem](https://github.com/RubyMoney/money) which
+will display prices consistently across all I18n locales. To change the
 currency for your site, go to Admin, then Configuration, then General Settings.
 Changing the currency will only change the currency symbol across all prices of
 your store.
@@ -155,7 +151,13 @@ There are configuration options for currency:
 
 * `Spree::Config[:currency]`: 3-letter currency code representing the current currency.
 
-### Localizing Seed Data
+This options should be set in `config/initializers/spree.rb` file in your application.
+
+## Multi-currency support
+
+To add multiple currency support to your application please install [Multi Currency extension](https://github.com/spree-contrib/spree_multi_currency).
+
+## Localizing Seed Data
 
 Spree use [Carmen](https://github.com/jim/carmen) to seed the Country and State data. You can localize the seed data by adding Carmen configuration to your `seeds.rb`. See example below:
 
@@ -170,7 +172,7 @@ Spree::Auth::Engine.load_seed if defined?(Spree::Auth)
 
 ## Creating and Modifying Locales
 
-While we have used [LocaleApp](http://localeapp.com) in the past to manage the translations for the spree_i18n project, Localeapp does not have support for different branches within the same project. As such, please submit Pull Requests or issues directly to https://github.com/spree/spree_i18n for missing translations.
+Please submit Pull Requests or issues directly to [spree_i18n](https://github.com/spree/spree_i18n) for missing translations.
 
 ## Localizing Extensions
 
@@ -182,8 +184,8 @@ rendered via the `Spree.t()` helper method even if they only include a single de
 language locale file (as other users can simply include the required YAML file
 and translations in their site extension).
 
-***
+<alert kind="note">
 Since Spree extensions are equivalent to Rails Engines they can provide
 localization information automatically (just like a standalone Rails
 application.)
-***
+</alert>
