--- a/guides/src/content/developer/customization/i18n.md
+++ b/guides/src/content/developer/customization/i18n.md
@@ -78,7 +78,7 @@ When reviewing the source of any view in Spree you'll notice that all text is
 rendered by passing a string to a helper method similar to:
 
 ```erb
-<%%= Spree.t(:price) %>
+<%= Spree.t(:price) %>
 ```
 
 The *Spree.t()* helper method looks up the currently configured locale and retrieves
@@ -128,7 +128,7 @@ into English
 => Action
 ```
 
-&nbsp; 
+&nbsp;
 
 ## Setting the Default Locale
 
