--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -68,6 +68,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Amalrik Maia](https://github.com/spree/spree/pull/9217)
 
+- Add validation on presence and uniqueness for Spree::Country iso and iso3 attributes
+
+  [Janusz Kojro](https://github.com/spree/spree/pull/9285)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...master).
