Remove Order#line_item_options_match

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -72,6 +72,18 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Janusz Kojro](https://github.com/spree/spree/pull/9285)
 
+- Remove Address#iso_name
+- Remove Adjustment#open and Adjustment#closed
+- Remove BaseHelper#variant_options
+- Remove Order#set_currency
+- Remove Order#register_line_item_comparison_hook
+- Remove Order#guest_token
+- Remove Address#same_as
+- Remove hash case in Order#create_line_items_from_params
+- Remove Order#line_item_options_match
+
+  [Janusz Kojro](https://github.com/spree/spree/pull/9285)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...master).
