--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -42,7 +42,7 @@ If you use any of those extensions please update them along with the Spree updat
 
 ```ruby
 gem 'spree', '~> 4.0.0.beta'
-gem 'spree_auth_devise', '~> 3.5'
+gem 'spree_auth_devise', '~> 4.0.0.beta'
 gem 'spree_gateway', '~> 3.4'
 ```
 
