--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -124,6 +124,14 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9307)
 
+- Droped `chromedriver-helper` and `selenium-webdriver` dependencies
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9381)
+
+- Added `webdrivers` dependency
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9381)
+
 ## Full Changelog
 
 You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...master).
