Corrects 4_0_0 release notes

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -124,11 +124,7 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9307)
 
-- Droped `chromedriver-helper` and `selenium-webdriver` dependencies
-
-  [Spark Solutions](https://github.com/spree/spree/pull/9381)
-
-- Added `webdrivers` dependency
+- Replaced deprecated `chromedriver-helper` with `webdrivers` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/9381)
 
