--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -119,7 +119,7 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 - Updated `factory_bot` to `5.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9362)
-  
+
 - Updated `cancancan` to `3.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9307)
@@ -127,6 +127,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 - Replaced deprecated `chromedriver-helper` with `webdrivers` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/9381)
+  
+- Deprecated `TestingSupport::ControllerRequests` methods like `spree_get`, `spree_post` etc
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9388)
 
 ## Full Changelog
 
