--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -64,57 +64,9 @@ rails g spree_gateway:install
 
 Please review each of the noteworthy changes to ensure your customizations or extensions are not affected. If you are affected by a change, and have any suggestions please submit a PR to help the next person!
 
-- Removed Paperclip support
+- Added presence and uniqueness validation for `Country#iso` and `Country#iso3` attributes
 
-  [Amalrik Maia](https://github.com/spree/spree/pull/9217)
-
-- Add validation on presence and uniqueness for Spree::Country iso and iso3 attributes
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9285)
-
-- Removed rspec-collection_matchers dependency
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9295)
-
-- Removed Address#iso_name
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/17b629233be3f6d9facb8ecfb06a6f99a5ba3a4f)
-
-- Removed Adjustment#open and Adjustment#closed
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/23568992c59f7249779037efb6ff0b6c6aea1b6a)
-
-- Removed BaseHelper#variant_options
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/1483c27ba364a55067f464ec730e45153a8531a5)
-
-- Removed Order#set_currency
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/e640891094e8f525243f1a507a231c2589c8c6dc)
-
-- Removed Order#register_line_item_comparison_hook
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/81bbb534109225a9f7944f31d4507c733e5a6941)
-
-- Removed Order#guest_token
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/103aa75139c9f3110a758e2cbcea2892d1519435)
-
-- Removed Address#same_as
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/c7970720e531ac62b82f24280dc78748c04c0ec4)
-
-- Removed hash case in Order#create_line_items_from_params
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/963f6f432a4d6f6f07d174d3ed4e6cf8227458db)
-
-- Removed Order#line_item_options_match
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9286/commits/2c3dcc72d594b891bb4749a36d30d8d49b675f4a)
-
-- Droped rspec-its dependency
-
-  [Janusz Kojro](https://github.com/spree/spree/pull/9292)
+  [Spark Solutions](https://github.com/spree/spree/pull/9285)
 
 - Updated `factory_bot` to `5.0`
 
@@ -124,13 +76,65 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9307)
 
-- Replaced deprecated `chromedriver-helper` with `webdrivers` gem
-
-  [Spark Solutions](https://github.com/spree/spree/pull/9381)
-  
 - Deprecated `TestingSupport::ControllerRequests` methods like `spree_get`, `spree_post` etc
 
   [Spark Solutions](https://github.com/spree/spree/pull/9388)
+
+- Removed deprecated `Address#iso_name` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/17b629233be3f6d9facb8ecfb06a6f99a5ba3a4f)
+
+- Removed deprecated `Adjustment#open` and `Adjustment#closed` scopes
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/23568992c59f7249779037efb6ff0b6c6aea1b6a)
+
+- Removed deprecated `BaseHelper#variant_options` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/1483c27ba364a55067f464ec730e45153a8531a5)
+
+- Removed deprecated `Order#set_currency` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/e640891094e8f525243f1a507a231c2589c8c6dc)
+
+- Removed deprecated `Order#register_line_item_comparison_hook` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/81bbb534109225a9f7944f31d4507c733e5a6941)
+
+- Removed deprecated `Order#guest_token` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/103aa75139c9f3110a758e2cbcea2892d1519435)
+
+- Removed deprecated `Address#same_as` method
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/c7970720e531ac62b82f24280dc78748c04c0ec4)
+
+- Removed deprecated hash case in `Order#create_line_items_from_params`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/963f6f432a4d6f6f07d174d3ed4e6cf8227458db)
+
+- Removed deprecated `Order#line_item_options_match`
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/2c3dcc72d594b891bb4749a36d30d8d49b675f4a)
+
+- Replaced deprecated `chromedriver-helper` with `webdrivers` gem
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9381)
+
+- Dropped `Paperclip` support
+
+  [Amalrik Maia](https://github.com/spree/spree/pull/9217)
+
+- Dropped `deface` dependency
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9394)
+
+- Dropped `rspec-collection_matchers` dependency
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9295)
+
+- Dropped `rspec-its` dependency
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9292)
 
 ## Full Changelog
 
