User can select Address from Address Book on Checkout

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -478,6 +478,20 @@ en:
     address1: Address
     address2: Address (contd.)
     addresses: Addresses
+    address_book:
+      other_address: "Other address"
+      add_new_shipping_address: "Add new address"
+      new_shipping_address: "New Address"
+      edit_shipping_address: "Edit Address"
+      no_shipping_addresses_on_file: "No addresses on file"
+      shipping_addresses: "Addresses"
+      successfully_created: "Address has been successfully created."
+      successfully_removed: "Address has been successfully removed."
+      successfully_saved: "Saved successfully"
+      unsuccessfully_saved: "There was an error while trying to save your address."
+      successfully_updated: "Updated successfully"
+      unsuccessfully_updated: "There was an update while trying to update your address."
+      save: "Save"
     adjustable: Adjustable
     adjustment: Adjustment
     adjustment_amount: Amount
