[Skip CI] Updated 4.0.0 release notes

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -76,9 +76,25 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9307)
 
+- Updated `Capybara` to `3.24`
+
+  [Thomas Walpole](https://github.com/spree/spree/pull/9424)
+
+- Updated `rspec-rails` to `4.0`
+
+  [Spark Solutions](https://github.com/spree/spree/commit/f1354c8e00ff69b5e01216b789c89aadb43f7ff6)
+
+- Move `ProductScopes` into a Concern
+
+  [Spark Solutions](https://github.com/spree/spree/commit/1da20381892509df9a472f450300daf32241b89d)
+
 - Deprecated `TestingSupport::ControllerRequests` methods like `spree_get`, `spree_post` etc
 
   [Spark Solutions](https://github.com/spree/spree/pull/9388)
+
+- Removed deprecated `OrderContents`
+
+  [Amalrik Maia](https://github.com/spree/spree/issues/8838)
 
 - Removed deprecated `Address#iso_name` method
 
@@ -116,9 +132,17 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9286/commits/2c3dcc72d594b891bb4749a36d30d8d49b675f4a)
 
+- Removed deprecated `OrdersController#populate` and `OrdersController#populate_redirect` actions
+
+  [Amalrik Maia](https://github.com/spree/spree/commit/d85b6137c5eb6346e171c8f5db7f8237cd7d08a5)
+
 - Replaced deprecated `chromedriver-helper` with `webdrivers` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/9381)
+
+- Replaced `ControllerRequests#spree_` methods with standard get/post/put/etc
+
+  [Spark Solutions](https://github.com/spree/spree/commit/123f4fd5fe366aae53b810323cd32f7c7ac651fb)
 
 - Dropped `Paperclip` support
 
