--- a/guides/src/content/release_notes/2_0_0.md
+++ b/guides/src/content/release_notes/2_0_0.md
@@ -269,7 +269,7 @@ Some of these changes may have made it into 1-3-stable or 1-2-stable as well. Yo
 * Improve 'out of stock' error message. <%= issue 1821 %>
 * Track IP addresses for orders, for payment gateway reasons. <%= issue 2216 %> <%= issue 2257 %>
 * Use protocol-specific URL for font. <%= issue 2316 %>
-* First order promotion will now work with guest users. <%= issue 2306 %>
+* First Order promotion will now work with guest users. <%= issue 2306 %>
 * Always show resend button on admin order page. <%= issue 2318 %>
 * Allow a shipment to be made 'ready' once order has been made 'resumed' <%= issue 2317 %>
 * PerItem calculator no longer fails if a rule doesn't respond to the `products` method. <%= issue 2322 %>
