Added note to 4.0 release notes about acts-as-taggable-on removal

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -144,6 +144,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/commit/123f4fd5fe366aae53b810323cd32f7c7ac651fb)
 
+- Dropped `acts-as-taggable-on` dependency and tag support. This will be later moved into an extension after `acts-as-taggable-on` will fully support Rails 6.0
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9491)
+
 - Dropped `Paperclip` support
 
   [Amalrik Maia](https://github.com/spree/spree/pull/9217)
