--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -7,13 +7,13 @@ hidden: true
 
 ## Major/New Features
 
-**Spree 4.0** requires **Rails 6.0.0** and **Ruby 2.5.0** (or higher).
+**Spree 4.0** requires **Rails 6.0** and **Ruby 2.5** (or higher).
 
 ### Rails 6.0 support
 
-### Storefront and Admin Panel moved upgraded to Bootstrap 4.2
+Spree 4.0 is fully compatible with [Rails 6.0](https://edgeguides.rubyonrails.org/6_0_release_notes.html)
+and the new default [Zeitwerk code autoloader](https://weblog.rubyonrails.org/2019/2/22/zeitwerk-integration-in-rails-6-beta-2/).
 
-We've migrated both the default Spree frontend and Admin Panel from Bootstrap 3 to Bootstrap 4.2. This update brings all of the new features and fixes introduced in [Bootstrap 4](https://blog.getbootstrap.com/2018/01/18/bootstrap-4/), [4.1](https://blog.getbootstrap.com/2018/04/09/bootstrap-4-1/) and [4.2](https://blog.getbootstrap.com/2018/12/21/bootstrap-4-2-1/). Accessibility and RWD was also improved in the process.
 
 Besides the Spree Frontend and Admin Panel we've also upgraded all extensions that required fixes, that is:
 
