Added note about Address Book in Spree 4.0

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -14,6 +14,9 @@ hidden: true
 Spree 4.0 is fully compatible with [Rails 6.0](https://edgeguides.rubyonrails.org/6_0_release_notes.html)
 and the new default [Zeitwerk code autoloader](https://weblog.rubyonrails.org/2019/2/22/zeitwerk-integration-in-rails-6-beta-2/).
 
+### Storefront and Admin Panel moved to Bootstrap 4.2
+
+We've migrated both the default Spree frontend and Admin Panel from Bootstrap 3 to Bootstrap 4.2. This update brings all of the new features and fixes introduced in [Bootstrap 4](https://blog.getbootstrap.com/2018/01/18/bootstrap-4/), [4.1](https://blog.getbootstrap.com/2018/04/09/bootstrap-4-1/) and [4.2](https://blog.getbootstrap.com/2018/12/21/bootstrap-4-2-1/). Accessibility and RWD were also improved in the process.
 
 Besides the Spree Frontend and Admin Panel we've also upgraded all extensions that required fixes, that is:
 
@@ -26,7 +29,6 @@ Besides the Spree Frontend and Admin Panel we've also upgraded all extensions th
 - [Editor](https://github.com/spree-contrib/spree_editor)
 - [Recently Viewed](https://github.com/spree-contrib/spree_recently_viewed)
 - [Related Products](https://github.com/spree-contrib/spree_related_products)
-- [Address Book](https://github.com/spree-contrib/spree_address_book)
 - [Static Content](https://github.com/spree-contrib/spree_static_content)
 - [Email to friend](https://github.com/spree-contrib/spree_email_to_friend)
 - [Volume Pricing](https://github.com/spree-contrib/spree_volume_pricing)
@@ -35,6 +37,12 @@ Besides the Spree Frontend and Admin Panel we've also upgraded all extensions th
 - [Avatax Certified](https://github.com/spree-contrib/spree_avatax_certified)
 
 If you use any of those extensions please update them along with the Spree update.
+
+### Address Book support
+
+Previously for multiple addresses support you had to use the [Spree Address Book](https://github.com/spree-contrib/spree_address_book) extension. We've decided that this was an inconsistency (user account already supported multiple credit cards) and moved this code into the core Spree and improved it.
+
+Thanks to this signed in customers can manage multiple addresses in the Checkout and Account for both Shipping and Billing.
 
 ## Installation
 
