Uodated noteworthy changes for Spree 4.0

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -50,8 +50,8 @@ Thanks to this signed in customers can manage multiple addresses in the Checkout
 
 ```ruby
 gem 'spree', '~> 4.0.0.beta'
-gem 'spree_auth_devise', '~> 4.0.0.beta'
-gem 'spree_gateway', '~> 3.4'
+gem 'spree_auth_devise', '~> 4.0.0.rc1'
+gem 'spree_gateway', '~> 3.5'
 ```
 
 ### Run `bundle install`
@@ -76,6 +76,30 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/pull/9285)
 
+- Added additional default zones (Asia, South America, Middle East)
+
+  [lon10](https://github.com/spree/spree/pull/9430)
+
+- Fixed potential XSS on Product Page
+
+  [Atsushi Yamamoto](https://github.com/spree/spree/pull/9422)
+
+- Added ability to set time parts of a promotion period
+
+  [kirikiriyamama](https://github.com/spree/spree/pull/9450)
+
+- Use API v2 for country state and zip in the Checkout address form
+
+  [Matthew Kennedy](https://github.com/spree/spree/pull/9453)
+
+- Added id to currency & security card divs in Admin Panel General Settings for easier override
+
+  [Atsushi Yamamoto](https://github.com/spree/spree/pull/9421)
+
+- Added `.cache` class in Admin Panel General Settings for easier override
+
+  [Atsushi Yamamoto](https://github.com/spree/spree/pull/9419)
+
 - Updated `factory_bot` to `5.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9362)
@@ -92,7 +116,11 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Spark Solutions](https://github.com/spree/spree/commit/f1354c8e00ff69b5e01216b789c89aadb43f7ff6)
 
-- Move `ProductScopes` into a Concern
+- Updated `ransack` to `3.2.0`
+
+  [Spark Solutions](https://github.com/spree/spree/commit/fa4d4b31da543a1eb056098e13b4dcb269a2c511)
+
+- Moved `ProductScopes` into a Concern
 
   [Spark Solutions](https://github.com/spree/spree/commit/1da20381892509df9a472f450300daf32241b89d)
 
@@ -144,6 +172,14 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Amalrik Maia](https://github.com/spree/spree/commit/d85b6137c5eb6346e171c8f5db7f8237cd7d08a5)
 
+- Removed deprecated `RespondWith` module
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9379)
+
+- Replaced `Spree::ProductScopes` with a concern
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9386)
+
 - Replaced deprecated `chromedriver-helper` with `webdrivers` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/9381)
@@ -163,6 +199,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 - Dropped `deface` dependency
 
   [Spark Solutions](https://github.com/spree/spree/pull/9394)
+
+- Dropped `versioncake` dependency
+
+  [Spark Solutions](https://github.com/spree/spree/pull/9392)
 
 - Dropped `rspec-collection_matchers` dependency
 
