Added Spree 3.7 to 4.0 upgrade guide

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -66,7 +66,7 @@ rails g spree_gateway:install
 
 ## Upgrade
 
-[3.7 to 4.0 upgrade guide](https://github.com/spree/spree/blob/master/guides/content/developer/upgrades/three-dot-seven-to-four-dot-zero.md)
+[3.7 to 4.0 upgrade guide](/developer/upgrades/three-dot-seven-to-four-dot-oh.html)
 
 ## Noteworthy changes
 
