--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -49,8 +49,8 @@ Thanks to this signed in customers can manage multiple addresses in the Checkout
 ### Add Spree gems to Gemfile
 
 ```ruby
-gem 'spree', '~> 4.0.0.beta'
-gem 'spree_auth_devise', '~> 4.0.0.rc1'
+gem 'spree', '~> 4.0.0.rc2'
+gem 'spree_auth_devise', '~> 4.0'
 gem 'spree_gateway', '~> 3.6'
 ```
 
