Added note about JSON-LD in 4.0 release notes

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -44,6 +44,10 @@ Previously for multiple addresses support you had to use the [Spree Address Book
 
 Thanks to this signed in customers can manage multiple addresses in the Checkout and Account for both Shipping and Billing.
 
+### JSON-LD strctured data support
+
+To support schema.org we've replaced the old Microdata code with the new recommended JSON-LD format. This will make your store more future proof and improve SEO in the coming months.
+
 ## Installation
 
 ### Add Spree gems to Gemfile
