Use Spree 4.0 final everywhere

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -53,7 +53,7 @@ To support schema.org we've replaced the old Microdata code with the new recomme
 ### Add Spree gems to Gemfile
 
 ```ruby
-gem 'spree', '~> 4.0.0.rc2'
+gem 'spree', '~> 4.0'
 gem 'spree_auth_devise', '~> 4.0'
 gem 'spree_gateway', '~> 3.6'
 ```
