Updated noteworthy changes for 4.0

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -104,6 +104,10 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
   [Atsushi Yamamoto](https://github.com/spree/spree/pull/9419)
 
+- Added `Order#valid_promotions` and `Order#valid_promotion_ids` methods  
+
+  [Spark Solutions](https://github.com/spree/spree/commit/381446fe95e97a1aabb01467b4efff434e35f609)
+
 - Updated `factory_bot` to `5.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/9362)
