--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -4,9 +4,9 @@ section: release_notes
 order: 0
 ---
 
-## Major/New Features
+<a href="https://spreecommerce.org/contact/" target="_blank" rel="nofollow"><img src="https://spreecommerce.org/wp-content/uploads/2019/10/spree_commerce_new_ux_template.jpg" /></a>
 
-**Spree 4.0** requires **Rails 6.0** and **Ruby 2.5** (or higher).
+## Major/New Features
 
 ### Rails 6.0 support
 
