--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -221,4 +221,4 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
 ## Full Changelog
 
-You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...master).
+You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...4-0-stable).
