Added new UX promo banner in 4.0.0 release notes (#9584)
* Added new UX promo banner in 4.0.0 release notes

* Fix compare link to compare 4.0 with 3.7

--- a/guides/src/content/release_notes/4_0_0.md
+++ b/guides/src/content/release_notes/4_0_0.md
@@ -4,9 +4,9 @@ section: release_notes
 order: 0
 ---
 
-## Major/New Features
+<a href="https://spreecommerce.org/contact/" target="_blank" rel="nofollow"><img src="https://spreecommerce.org/wp-content/uploads/2019/10/spree_commerce_new_ux_template.jpg" /></a>
 
-**Spree 4.0** requires **Rails 6.0** and **Ruby 2.5** (or higher).
+## Major/New Features
 
 ### Rails 6.0 support
 
@@ -221,4 +221,4 @@ Please review each of the noteworthy changes to ensure your customizations or ex
 
 ## Full Changelog
 
-You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...master).
+You can view the full changes using [Github Compare](https://github.com/spree/spree/compare/3-7-stable...4-0-stable).
