--- a/guides/src/content/release_notes/2_1_0.md
+++ b/guides/src/content/release_notes/2_1_0.md
@@ -224,7 +224,7 @@ No changes.
 
 - Translation for admin tabs are now located under the `spree.admin.tab` key. Previously, they were on the top-level, which led to conflicts when users wanted to override view translations, like this:
 
-```yml
+```yaml
 en:
   spree:
     orders:
