--- a/guides/src/content/release_notes/1_3_0.md
+++ b/guides/src/content/release_notes/1_3_0.md
@@ -19,7 +19,7 @@ Here's a quick summary of the major features in this release:
 
 Alexey Topolyanskiy has done some amazing work performing a makeover for the admin backend for Spree, something that has been long overdue!
 
-![](../images/developer/new-admin-interface.png)
+![](../../../images/developer/new-admin-interface.png)
 
 ### Currency support
 
