--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -473,7 +473,7 @@ en:
     add_to_cart: Add To Cart
     add_variant: Add Variant
     add_store_credit: Add Store Credit
-    added_to_cart: 'Added to bag successfully!'
+    added_to_cart: Added to bag successfully!
     additional_item: Additional Item
     address: Address
     address1: Address
