Add new reports tabs to sidebar

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -534,6 +534,8 @@ en:
         promotion_categories: Promotion Categories
         properties: Properties
         prototypes: Prototypes
+        reports_total_sales: Total Sales
+        reports_average_order_values: Average Order Value
         reports: Reports
         taxonomies: Taxonomies
         taxons: Taxons
