Add missing New reports i18n string

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1035,6 +1035,7 @@ en:
     new_refund: New Refund
     new_refund_reason: New Refund Reason
     new_reimbursement_type: New Reimbursement Type
+    new_reports: New reports
     new_rma_reason: New RMA Reason
     new_return_authorization: New Return Authorization
     new_role: New Role
