Changes store to store_name in en.yml and views

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1531,7 +1531,7 @@ en:
         must_have_variant: You must add atleast one variant.
     stock_transfers: Stock Transfers
     stop: Stop
-    store: Store
+    store_name: Store
     store:
       errors:
         unable_to_create: Unable to create store.
